cluster/manifests/jupyterhub/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    name: jupyterhub
    # jupyterhub spawns user pods with hostPath volumes
    pod-security.kubernetes.io/enforce: privileged
    # Use https://github.com/splunk/jupyterhub-istio-proxy instead of configurable-http-proxy
    #istio-injection: disabled
