cluster/manifests/jupyterhub/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: jupyterhub
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - notebook.minikube.127.0.0.1.nip.io
        - notebook.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
