cluster/manifests/jupyterhub/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: hub
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/component: hub
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/component: proxy
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        # Use https://github.com/splunk/jupyterhub-istio-proxy instead of configurable-http-proxy
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: singleuser-server
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/component: singleuser-server
  outboundTrafficPolicy:
    mode: ALLOW_ANY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - cortex-api/cortex-api.cortex-api.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
